--- a/.github/workflows/X86-Mini-OpenWrt.yml
+++ b/.github/workflows/X86-Mini-OpenWrt.yml
@@ -38,20 +38,6 @@ jobs:
         echo -e "$(sudo lshw -short -C memory | grep GiB)\n"
         echo "--------------------------硬盘信息--------------------------"
         echo "硬盘数量: $(ls /dev/sd* | grep -v [1-9] | wc -l)" && df -hT
-
-    # - name: 初始化编译环境
-    #   env:
-    #     DEBIAN_FRONTEND: noninteractive
-    #   run: |
-    #     docker rmi $(docker images -q)
-    #     sudo rm -rf /usr/share/dotnet /etc/apt/sources.list.d /usr/local/lib/android $AGENT_TOOLSDIRECTORY
-    #     sudo -E apt-get -y purge azure-cli ghc* zulu* llvm* firefox google* dotnet* powershell openjdk* mongodb* moby* || true
-    #     sudo -E apt-get -y update
-    #     sudo -E apt-get -y install rename $(curl -fsSL is.gd/depends_ubuntu_2204)
-    #     sudo -E systemctl daemon-reload
-    #     sudo -E apt-get -y autoremove --purge
-    #     sudo -E apt-get -y clean
-    #     sudo timedatectl set-timezone "$TZ"
     
     - name: 初始化编译环境
       env:
@@ -97,7 +83,7 @@ jobs:
       run: |
         cp $CONFIG_FILE $OPENWRT_PATH/.config
         cd $OPENWRT_PATH
-        # make defconfig > /dev/null 2>&1
+        make defconfig > /dev/null 2>&1
         SOURCE_REPO="$(echo $REPO_URL | awk -F '/' '{print $(NF)}')"
         echo "SOURCE_REPO=$SOURCE_REPO" >> $GITHUB_ENV
         DEVICE_TARGET=$(cat .config | grep CONFIG_TARGET_BOARD | awk -F '"' '{print $2}')
