--- a/.github/workflows/Rockchip-OpenWrt.yml
+++ b/.github/workflows/Rockchip-OpenWrt.yml
@@ -133,7 +133,7 @@ jobs:
     - name: 下载软件包
       run: |
         cd $OPENWRT_PATH
-        # make defconfig
+        make defconfig
         make download -j8
         find dl -size -1024c -exec ls -l {} \;
         find dl -size -1024c -exec rm -f {} \;
