--- a/.github/workflows/X86-GDQ-OpenWrt.yml
+++ b/.github/workflows/X86-GDQ-OpenWrt.yml
@@ -83,7 +83,7 @@ jobs:
       run: |
         cp $CONFIG_FILE $OPENWRT_PATH/.config
         cd $OPENWRT_PATH
-        # make defconfig > /dev/null 2>&1
+        make defconfig > /dev/null 2>&1
         SOURCE_REPO="$(echo $REPO_URL | awk -F '/' '{print $(NF)}')"
         echo "SOURCE_REPO=$SOURCE_REPO" >> $GITHUB_ENV
         DEVICE_TARGET=$(cat .config | grep CONFIG_TARGET_BOARD | awk -F '"' '{print $2}')
@@ -133,7 +133,7 @@ jobs:
     - name: 下载软件包
       run: |
         cd $OPENWRT_PATH
-        # make defconfig
+        make defconfig
         make download -j8
         find dl -size -1024c -exec ls -l {} \;
         find dl -size -1024c -exec rm -f {} \;
