--- a/.github/workflows/Build-X86-Mini.yml
+++ b/.github/workflows/Build-X86-Mini.yml
@@ -8,7 +8,7 @@ env:
   REPO_BRANCH: master
   CONFIG_FILE: config/x86-mini.config
   DIY_SCRIPT: customize/x86-mini.sh
-  CLASH_KERNEL: amd64
+  ARCH_KERNEL: amd64
   UPLOAD_BIN_DIR: false
   FIRMWARE_RELEASE: true
   FIRMWARE_TAG: X86-Mini
@@ -117,8 +117,8 @@ jobs:
         chmod +x $DIY_SCRIPT
         $GITHUB_WORKSPACE/$DIY_SCRIPT
         cd $OPENWRT_PATH
-        $GITHUB_WORKSPACE/scripts/preset-clash-core.sh $CLASH_KERNEL
-        $GITHUB_WORKSPACE/scripts/preset-adguard-core.sh $CLASH_KERNEL
+        $GITHUB_WORKSPACE/scripts/preset-clash-core.sh $ARCH_KERNEL
+        $GITHUB_WORKSPACE/scripts/preset-adguard-core.sh $ARCH_KERNEL
 
     - name: 下载软件包
       run: |
