--- a/.github/workflows/Build-X86-GDQ-.yml
+++ b/.github/workflows/Build-X86-GDQ-.yml
@@ -9,7 +9,7 @@ env:
   REPO_BRANCH: master
   CONFIG_FILE: config/x86-gdq.config
   DIY_SCRIPT: customize/x86-gdq.sh
-  CLASH_KERNEL: amd64
+  ARCH_KERNEL: amd64
   UPLOAD_BIN_DIR: false
   FIRMWARE_RELEASE: true
   FIRMWARE_TAG: X86-GDQ
@@ -118,8 +118,8 @@ jobs:
         chmod +x $DIY_SCRIPT
         $GITHUB_WORKSPACE/$DIY_SCRIPT
         cd $OPENWRT_PATH
-        $GITHUB_WORKSPACE/scripts/preset-clash-core.sh $CLASH_KERNEL
-        $GITHUB_WORKSPACE/scripts/preset-adguard-core.sh $CLASH_KERNEL
+        $GITHUB_WORKSPACE/scripts/preset-clash-core.sh $ARCH_KERNEL
+        $GITHUB_WORKSPACE/scripts/preset-adguard-core.sh $ARCH_KERNEL
 
     - name: 下载软件包
       run: |
