--- a/.github/workflows/Build-X86-Mini.yml
+++ b/.github/workflows/Build-X86-Mini.yml
@@ -169,8 +169,8 @@ jobs:
       with:
         name: R${{ env.DATE }} for ${{ env.FIRMWARE_TAG }}
         allowUpdates: true
-        tag: ${{ env.FIRMWARE_TAG }}-${{ env.DATE }}
-        token: ${{ secrets.GITHUB_TOKEN }}-${{ env.TAG_DATE }}
+        tag: ${{ env.FIRMWARE_TAG }}-${{ env.TAG_DATE }}
+        token: ${{ secrets.GITHUB_TOKEN }}
         artifacts: ${{ env.FIRMWARE_PATH }}/*
         body: |
           **This is OpenWrt Firmware for ${{ env.FIRMWARE_TAG }}**
