--- a/.github/workflows/Daily-Cleanup.yml
+++ b/.github/workflows/Daily-Cleanup.yml
@@ -6,7 +6,6 @@ on:
   
 env:
   UPLOAD_RELEASE: true
-  GITHUB_TOKEN: ${{ secrets.AUTH_PAT }}
   
 jobs:
   Cleaning:
@@ -17,7 +16,7 @@ jobs:
     - name: 删除运行记录
       uses: GitRML/delete-workflow-runs@main
       with:
-        token: ${{ env.GITHUB_TOKEN }}
+        token: ${{ secrets.GITHUB_TOKEN }}
         retain_days: 1
         keep_minimum_runs: 0
         
@@ -26,6 +25,6 @@ jobs:
       uses: dev-drprasad/delete-older-releases@v0.1.0
       if: env.UPLOAD_RELEASE == 'true' && !cancelled()
       with:
-        token: ${{ env.GITHUB_TOKEN }}
+        token: ${{ secrets.GITHUB_TOKEN }}
         keep_latest: 4
         delete_tags: true
