--- a/.github/workflows/Build-R2S.yml
+++ b/.github/workflows/Build-R2S.yml
@@ -3,6 +3,8 @@ name: Build R2S
 on:
   repository_dispatch:
   workflow_dispatch:
+  schedule:
+    - cron: 0 18 * * *
 
 env:
   REPO_URL: https://github.com/coolsnowwolf/lede
