--- a/.github/workflows/Build-R2S.yml
+++ b/.github/workflows/Build-R2S.yml
@@ -130,6 +130,7 @@ jobs:
         cd $OPENWRT_PATH
         $GITHUB_WORKSPACE/scripts/preset-clash-core.sh $ARCH_KERNEL
         $GITHUB_WORKSPACE/scripts/preset-adguard-core.sh $ARCH_KERNEL
+        $GITHUB_WORKSPACE/scripts/preset-psswall.sh
 
     - name: 下载软件包
       run: |
