--- a/.github/workflows/Build-R4S.yml
+++ b/.github/workflows/Build-R4S.yml
@@ -182,7 +182,7 @@ jobs:
       with:
         name: R${{ env.DATE }} for ${{ env.FIRMWARE_TAG }}
         allowUpdates: true
-        tag: ${{ env.FIRMWARE_TAG }}-$(date +"%Y-%m-%d-%H-%M")
+        tag: ${{ env.FIRMWARE_TAG }}
         token: ${{ secrets.GITHUB_TOKEN }}
         artifacts: ${{ env.FIRMWARE_PATH }}/*
         body: |
