--- a/.github/workflows/Build-X86PANG.yml
+++ b/.github/workflows/Build-X86PANG.yml
@@ -6,7 +6,7 @@ on:
 env:
   REPO_URL: https://github.com/coolsnowwolf/lede
   REPO_BRANCH: master
-  CONFIG_FILE: config/x86-mini.config
+  CONFIG_FILE: config/x86-pang.config
   DIY_SCRIPT: customize/x86-pang.sh
   ARCH_KERNEL: amd64
   UPLOAD_BIN_DIR: false
